Share javac module flags